--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "backend": "file:",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mongo": "^0.1.0",
     "mongod": "^2.0.0",
     "mongodb": "^6.10.0",
